<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddActivity">

        <TextView
            android:id="@+id/text_name_object"
            android:text="@string/name"
            android:textSize="18dp"
            android:focusableInTouchMode="true"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/name_object"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="@string/enter_name"/>

        <TextView
            android:id="@+id/text_description_object"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/description_object"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="@string/enter_description"/>

        <TextView
            android:id="@+id/text_url_image"
            android:layout_marginTop="24dp"
            android:text="@string/url_image"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/url_image"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="@string/enter_url_image"/>

        <TextView
            android:id="@+id/text_select_color"
            android:layout_marginTop="24dp"
            android:text="@string/select_color"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:buttonTint="@android:color/holo_blue_dark"
                android:text="@string/blue"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/green"
                app:buttonTint="@android:color/holo_green_dark"/>

            <RadioButton
                android:id="@+id/radioYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yellow"
                app:buttonTint="@android:color/holo_orange_light"/>

            <RadioButton
                android:id="@+id/radioRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red"
                app:buttonTint="@android:color/holo_red_dark"/>
        </RadioGroup>

        <Button
            android:id="@+id/add_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_in_db"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickAdd"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>